<resources>
    <string name="app_name">Video To Mp3</string>
    <string name="welcome_hint">Video To MP3</string>
    <string name="allow_storage_access_title">Allow VLC to access video and audio files</string>
    <string name="allow_storage_access_description">VLC needs you to grant this permission to access the media files on this device.</string>
    <string name="allow_settings_access_ringtone_title">Allow VLC to set the ringtone</string>
    <string name="allow_settings_access_ringtone_description">VLC needs you to grant this permission to set up this song as your ringtone.</string>
    <string name="allow_settings_access_brightness_title">Allow VLC to change brightness mode</string>
    <string name="allow_settings_access_brightness_description">VLC needs you to grant this permission to change your brightness mode.</string>
    <string name="allow_draw_overlays_title">Allow VLC player popup over other apps</string>
    <string name="allow_sdraw_overlays_description">VLC needs you to grant this permission display your video in a popup over other applications.</string>
    <string name="permission_ask_again">Grant permission</string>
    <string name="exit_app">Close VLC</string>

    <string name="home_item_movies">All Videos</string>
    <string name="home_item_movies_sub">8 Videos</string>
    <string name="home_item_works">All Works</string>
    <string name="home_item_works_sub">9 Works</string>
    <string name="home_item_private">Private Box</string>
    <string name="home_item_private_sub"></string>
    <!--<string name="fragment_page_home">HOME</string>-->
    <!--<string name="fragment_page_videos">VIDEOS</string>-->
    <!--<string name="fragment_page_folders">FOLDERS</string>-->

    <string name="type_music">Music</string>
    <string name="type_alarm">Alarm</string>
    <string name="type_notification">Notification</string>
    <string name="type_ringtone">Ringtone</string>

    <string name="video_saved_at">Video saves at : $%1s</string>
    <string name="trimming_progress">Trimming your video...</string>
    <string name="extra_audio_path">EXTRA_VIDEO_PATH</string>

    <string name="title_main">Video To Mp3</string>

    <string name="menu_about">About</string>
    <string name="menu_rate">Rate us</string>
    <string name="menu_invite">Invite Friends</string>
    <string name="menu_help">Help &amp; Feedback</string>

    <!--about-->
    <string name="about_version">Version: V %1$s</string>


    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_success"> delete success</string>
    <string name="delete_content">Are you sure to delete this file?</string>
    <string name="delete_title">Delete file</string>


    <string name="menu_set_default">Set as default ringtone</string>
    <string name="menu_set_notification">Set as default notification</string>
    <string name="menu_set_alarm">Set as alarm ringtone</string>
    <string name="menu_share">Share</string>



    <string name="file_save_title">Save As:</string>
    <string name="file_save_button_save">Save</string>
    <string name="file_save_button_cancel">Cancel</string>

    <string name="set_ringtone_title">Set as default ringtone</string>
    <string name="set_notification_title">Set as default notification</string>
    <string name="set_alarm_title">Set as default alarm</string>

    <string name="set_ringtone_content">Are you sure to set as default ringtone?</string>

    <string name="set_ringtone_success">Yes, Set Default Ringtone success!</string>
    <string name="set_notification_success">Yes, Set Default Notification success!</string>
    <string name="set_alarm_success">Yes, Set Default Alarm success!</string>
    <string name="set_notification_content">Are you sure to set as default notification?</string>

    <string name="set_alarm_content">Are you sure to set as alarm ringtone?</string>


</resources>
