<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<group android:id="@+id/menu_group_sort">-->
        <!--<item-->
            <!--android:id="@+id/menu_sort"-->
            <!--android:title="@string/menu_sort">-->
            <!--&lt;!&ndash; 二级菜单 &ndash;&gt;-->
            <!--<menu>-->
                <!--<item-->
                    <!--android:id="@+id/menu_sort_name"-->
                    <!--android:title="@string/menu_sort_name">-->

                <!--</item>-->
                <!--<item-->
                    <!--android:id="@+id/menu_sort_date"-->
                    <!--android:title="@string/menu_sort_date">-->

                <!--</item>-->

                <!--<item-->
                    <!--android:id="@+id/menu_sort_track"-->
                    <!--android:title="@string/menu_sort_track">-->

                <!--</item>-->
                <!--<item-->
                    <!--android:id="@+id/menu_sort_artist"-->
                    <!--android:title="@string/menu_sort_artist">-->

                <!--</item>-->
                <!--<item-->
                    <!--android:id="@+id/menu_sort_album"-->
                    <!--android:title="@string/menu_sort_album">-->

                <!--</item>-->
            <!--</menu>-->
        <!--</item>-->
    <!--</group>-->
    <item
        android:id="@+id/menu_about"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:title="@string/menu_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_rate"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:title="@string/menu_rate"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_invite"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:title="@string/menu_invite"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_help"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:title="@string/menu_help"
        app:showAsAction="never" />
</menu>