<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cutter"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/padding_16"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dip"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/menu_about"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_big" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="24dp"
            android:layout_width="96dip"
            android:layout_gravity="center"
            android:layout_height="96dip"
            android:src="@drawable/video_2_audio" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/text_gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            tools:text="@string/about_version"
            android:textColor="@color/text_gray"
            android:textSize="14sp" />

        <View
            android:layout_marginTop="19dp"
            style="@style/HorizontalDivider"/>

        <LinearLayout
            android:id="@+id/link"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:src="@drawable/ic_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Visit our website"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:src="@drawable/ic_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="Contact us"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/rate"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:src="@drawable/ic_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="Rate us on Play Store"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
